<resources>
    <string name="app_name">CustomButtonDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="fields_required">All fields requires</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="error_login">User name or password not matched</string>
</resources>